--- a/W1D3/shop.css
+++ b/W1D3/shop.css
@@ -1,19 +1,86 @@
     *{
         margin: 0;
-        margin: 0;
+        padding: 0;
+
     }
     .container{
+       /* border: 6px solid black;*/
         height: 100vh;
         width: 100%;
-       background-color: darksalmon; 
+        background-position: center;
+       background-image: url(OIP.jpg);
         background-size: cover;
         padding-left: 5%;
         padding-right: 5%;
         box-sizing: border-box;
-        position: relative;
+        position:relative;
+        
+    }
+    .navbar{
+        width:100%;
+        height:15vh;
+        margin: auto;
+        display:flex;
+        align-items:center;
+    }
+    .logo{
+        width: 160px;
+        cursor: pointer;
+    }
+    .cart{
+        width:40px;
+        cursor: pointer;
+    }
+  nav{
+        flex:1;
+        padding-left: 60px;
+    }
+    nav ul li{
+        display: inline-block;
+        list-style: none;
+        margin:0px 20px ;
+    
+    }
+    nav ul li a{
+        text-decoration: none;
+        color:khaki
+    }
+    .content h1{
+        font-size: 30px;
+         font-weight: 100px;
+         margin-top: 24px;
+         margin-bottom: 15px;
+          color: green;
+    }
+    .content p{
+        font-size: 20px;
+        color:lightyellow
+    }
 
+    .content{
+        margin-left: 10px;
+        margin-top:10px ;
 
     }
-    ul{
-        font-size: 30px ;
+    .content .btn{
+        display: inline-block;
+        background: linear-gradient(45deg, #87adfe,#ff77cd) ;
+        border-radius: 6px;
+        padding: 10px 20px;
+        box-sizing: border-box;
+        text-decoration: none;
+        color:dodgerblue;
+        box-shadow: forestgreen;
+    }
+    .arrow{
+        color: rgb(233, 229, 229);
+        margin-top: 40px;
+        display: flex;
+    }
+    .final{
+        
+        height: 90%;
+        position:absolute;
+        bottom: 0px;
+        right: 160px;
     }
